# qualisys_cpp_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  DeserializationApi.cpp  DeserializationApi.h  Deserializer.cpp  Deserializer.h  DeserializerApi.cpp  DeserializerApi.h  LICENSE.md  Markup.cpp  Markup.h  MarkupSerializer.cpp  MarkupSerializer.h  Network.cpp  Network.h  README.md  RTClientSDK.sln  RTClientSDK.vcxproj  RTClientSDK.vcxproj.filters  RTPacket.cpp  RTPacket.h  RTProtocol.cpp  RTProtocol.h  SerializationApi.cpp  SerializationApi.h  Serializer.cpp  Serializer.h  SerializerApi.cpp  SerializerApi.h  Settings.cpp  Settings.h  SettingsDeserializer.cpp  SettingsDeserializer.h  SettingsSerializer.cpp  SettingsSerializer.h  Tinyxml2Deserializer.cpp  Tinyxml2Deserializer.h  Tinyxml2Serializer.cpp  (+2 more)
.github/workflows/: cmake-multi-platform.yml  msbuild.yml
RTClientExample/: CMakeLists.txt  Input.cpp  Input.h  Operations.cpp  Operations.h  Output.cpp  Output.h  OutputSettings.cpp  RTClientExample.cpp  RTClientExample.vcxproj  RTClientExample.vcxproj.filters
RTClientExample/Debug/Win32/: RTClientExample.ilk
RigidBodyStreaming/: CMakeLists.txt  RigidBodyStreaming.cpp  RigidBodyStreaming.vcxproj
RigidBodyStreaming/Debug/Win32/: RigidBodyStreaming.ilk
RigidBodyStreaming/Debug/x64/: RigidBodyStreaming.ilk
Settings/: GeneralSettings.cpp
Tests/: 3dParametersTests.cpp  3dXmlTests.cpp  6dParametersTests.cpp  6dXmlTests.cpp  AnalogParametersTests.cpp  AnalogXmlTests.cpp  CMakeLists.txt  CalibrationParametersTests.cpp  CalibrationXmlTests.cpp  EyeTrackerParametersTests.cpp  EyeTrackerXmlTests.cpp  ForceParametersTests.cpp  ForceXmlTests.cpp  GazeVectorParameterXmlTests.cpp  GazeVectorParametersTests.cpp  GazeVectorXmlTests.cpp  GeneralParametersTests.cpp  GeneralXmlTests.cpp  ImageParametersTests.cpp  ImageXmlTests.cpp  ParametersTestsShared.h  RTProtocolXmlTests.cpp  RtProtocolSkeletonSettingsXmlTests.cpp  SkeletonParametersTests.cpp  SkeletonXmlTests.cpp  TestUtils.h  XmlTestData.h  tests.cpp
Tests/Data/: 3D.h  6Dof.h  6d.h  Analog.h  Calibration.h  EyeTracker.h  Force.h  Gaze.h  GazeVector.h  General.h  Image.h  Skeleton.h
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: doctest.cmake  tinyxml2.cmake
